<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="25dp"
    android:gravity="center" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/tv_gateway" />

        <EditText
            android:id="@+id/et_gateway"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:inputType="text|number"
            android:text="42.121.131.66"
            tools:ignore="HardcodedText" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/tv_port" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:inputType="text|number"
            android:text="9999"
            tools:ignore="HardcodedText" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <Button
            android:id="@+id/b_connect"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/b_connect" />

        <Button
            android:id="@+id/b_cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/b_cancel" />
    </TableRow>

</TableLayout>