<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="25dp"
    android:gravity="center" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/tv_wave" />

        <EditText
            android:id="@+id/et_rate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="text|number"
            android:text="2000"
            tools:ignore="HardcodedText" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <Button
            android:id="@+id/b_start"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/b_start" />

        <Button
            android:id="@+id/b_record"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/b_record" />
    </TableRow>

</TableLayout>